--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,11 +17,10 @@
     "@emotion/styled": "^11.14.1",
     "@mui/icons-material": "^7.3.6",
     "@mui/material": "^7.3.6",
+    "@mui/x-charts": "^8.22.0",
     "@tanstack/react-query": "^5.90.12",
     "axios": "^1.13.2",
     "dayjs": "^1.11.19",
-    "echarts": "^6.0.0",
-    "echarts-for-react": "^3.0.5",
     "i18next": "^25.7.3",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
