feat: Update documentation and configuration for DM8 integration
- Enhanced AGENTS.md with Docker Compose instructions and connection examples for DM8.
- Added detailed domain design and data flow in platform-design.md.
- Updated application.yml to always initialize the database schema and continue on error.
- Introduced base-schema.sql for DM8/H2 compatibility with master data and time-series tables.
- Upgraded frontend dependencies including React and Vite to latest versions in package.json and package-lock.json.

--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -44,7 +44,9 @@ spring:
       port: ${REDIS_PORT:6379}
   sql:
     init:
-      mode: never
+      mode: always
+      schema-locations: classpath:db/base-schema.sql
+      continue-on-error: true
   flyway:
     enabled: false
 
