feat: implement OverviewPage with real API integration for parks, assets, measurements, forecasts, and dispatch plans
- Refactor OverviewPage to utilize real API endpoints for fetching parks, assets, meter points, latest measurements, generation forecasts, and dispatch plans.
- Add state management for selected park and asset, allowing user input for monitoring point IDs.
- Introduce new metrics display for selected park and asset, including latest measurement values and generation forecasts.
- Implement demo data seeding in DevDataSeeder for development and testing purposes, including parks, assets, meter points, measurements, forecasts, and dispatch plans.
- Create new REST controllers for master data, timeseries, forecasts, and dispatch plans.
- Update common types to include StatusLevel for better status management across components.
- Enhance UI components to reflect new data structure and improve user experience.

--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -47,6 +47,9 @@ spring:
       mode: always
       schema-locations: classpath:db/base-schema.sql
       continue-on-error: true
+app:
+  seed:
+    demo-enabled: true
   flyway:
     enabled: false
 
@@ -78,3 +81,6 @@ spring:
         enabled: false
   flyway:
     enabled: false # Flyway不内置支持DM，关闭自动迁移，待使用达梦方言插件或手工脚本后再开启
+app:
+  seed:
+    demo-enabled: true # 若不希望 DM8 自动注入演示数据，可将 APP_SEED_DEMO_ENABLED=false
